# F1_WEB

./: .cursorrules  .env.template  .gitignore  CURSOR_RULES.md  PRE_COMMIT_SETUP.md  PROJECT_STRUCTURE.md  README.md  crop_avatar.sh  docker-compose.yml  env.example  f1_auto_setup.html  f1_sync_manager.html  render-pip.yaml  render.yaml
backend/: .pre-commit-config.yaml  AUTO_SCHEDULER_README.md  CIRCUIT_SCRAPING_GUIDE.md  CLI_USAGE.md  DEPLOYMENT_CHECKLIST.md  FILE_CLEANUP_SUMMARY.md  FastF1_完整数据结构对比分析.md  FastF1_实际修复方案.md  FastF1_数据结构对比分析.md  OPTIMIZATION_SUMMARY.md  POST_RACE_SYNC_GUIDE.md  POST_RACE_SYSTEM_README.md  README.md  alembic.ini  auto_setup.py  check_circuits.py  check_database_state.py  check_db.py  check_fastf1_schedule.py  check_races.py  check_sprint_races.py  compare_schedule_apis.py  data_explorer.py  data_modeling_plan.md  data_test.py  debug_race_query.py  debug_sprint_sync.py  demo_post_race_system.py  f1_data_backup.sql  f1_data_export.sql  fastf1_data_exploration_20250621_153234.md  fix_missing_circuit_images.py  fix_sprint_races_correct.py  get_2025_schedule.py  manage.py  migrate_data.py  pyproject.toml  requirements.txt  spa_page_debug.html  spa_text_debug.txt  (+23 more)
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/fastF1_data/: 2025_circuits_ergast_20250701_113134.csv  2025_constructor_standings_content_0_20250701_113137.csv  2025_constructors_ergast_20250701_113134.csv  2025_driver_standings_content_0_20250701_113136.csv  2025_driver_standings_description_20250701_113136.csv  2025_drivers_ergast_20250701_113133.csv  2025_qualifying_results_content_0_20250701_113135.csv  2025_qualifying_results_content_1_20250701_113135.csv  2025_race_results_content_0_20250701_113134.csv  2025_race_results_content_1_20250701_113134.csv  2025_race_results_description_20250701_113134.csv  2025_sprint_results_content_0_20250701_113136.csv  2025_sprint_results_content_1_20250701_113136.csv  2025_sprint_results_description_20250701_113136.csv
backend/schedule_data/: 2025_schedule_ergast.csv  2025_schedule_ergast.json  2025_schedule_fastf1.csv  (+3 more)
(+193 files in other folders)
